{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "BuildingActions",
            "id": "0c2bc00c-7e5b-4c96-aafd-4ecc37a886eb",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "16c17e29-db7c-4bbe-afe0-f49bf72352fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "b7c4e149-22c0-4807-a7ce-fb670371d2da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f6d31db-06be-43d2-992f-5d1ee847d969",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25401ec4-7f4e-4f57-8996-2db2e80c6e9d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}